# goit-python-web-07-hw

./: alembic.ini  config.ini  main.py  pyproject.toml  seed.py
confa/: db.py  models.py
migrations/: README.txt  env.py
migrations/versions/: cac572444359_init.py
